Respaldo antes de implementación de previsualización de archivos de word y excel

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <ul class="file-list" id="file-list-left"></ul>
         </div>
 
+        <!-- Barra de redimensionamiento izquierda -->
+        <div id="left-resizer" class="resizer"></div>
+
         <!-- Panel de Acciones Central -->
         <div id="panel-actions" class="actions-panel">
             <button id="move-to-right" title="Mover a la derecha">&rarr;</button>
